Fix static file caching issues

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chi phí đi lại</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <div class="container">
@@ -96,7 +96,7 @@
       <input type="text" id="childNote">
     
       <label for="childImage">Hình ảnh</label>
-      <input type="file" id="childImage" accept="image/*">
+      <input type="file" id="childImage" name="image" accept="image/*">
     
       <button type="submit">Lưu</button>
     </form>
