--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <!-- Modal đăng nhập -->
-  <div id="loginModal" class="modal-fullscreen">
-    <div class="modal-content">
+  <!-- <div id="loginModal" class="modal-login">
+    <div class="modal-login-content">
       <header>
         <h2>Đăng nhập</h2>
       </header>
@@ -26,7 +26,39 @@
         <p id="loginError" style="color: red; display: none;">Thông tin đăng nhập không chính xác!</p>
       </form>
     </div>
-  </div>
+  </div> -->
+
+  <section id="loginModal" class="vh-100 gradient-custom modal-login">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+            <div class="card-body p-5 text-center">
+  
+              <div class="mb-md-5 mt-md-4 pb-5">
+  
+                <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+                <p class="text-white-50 mb-5">Please enter your login and password!</p>
+  
+                <div data-mdb-input-init class="form-outline form-white mb-4">
+                  <input type="text" id="username" class="form-control form-control-lg" placeholder="Nhập tài khoản" required>
+                  <label class="form-label" for="username">Tài khoản</label>
+                </div>
+  
+                <div data-mdb-input-init class="form-outline form-white mb-4">
+                  <input type="password" id="password" class="form-control form-control-lg" required />
+                  <label class="form-label" for="password">Password</label>
+                </div>
+
+  
+                <button data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-lg px-5" type="submit">Login</button> 
+              </div>  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
     <!-- Nội dung chính -->
     <div id="mainContent" style="display: none;">
         <div class="container">
