--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
           <div class="card bg-dark text-white" style="border-radius: 1rem;">
             <div class="card-body p-5 text-center">
   
-              <div class="mb-md-5 mt-md-4 pb-5">
+              <div id="loginForm" class="mb-md-5 mt-md-4 pb-5">
   
                 <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
                 <p class="text-white-50 mb-5">Please enter your login and password!</p>
@@ -49,8 +49,6 @@
                   <input type="password" id="password" class="form-control form-control-lg" required />
                   <label class="form-label" for="password">Password</label>
                 </div>
-
-  
                 <button data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-lg px-5" type="submit">Login</button> 
               </div>  
             </div>
