Fix static file caching issues

--- a/public/index.html
+++ b/public/index.html
@@ -56,11 +56,12 @@
         <div id="childModal" class="modal-fullscreen hidden">
         <div class="modal-content">
             <span class="close" id="closeModalBtn">&times;</span> <!-- Nút đóng -->
-            <header class="content">
             <h2>Chi tiết chi phí</h2>
-            <button id="addChildButton" class="icon-button"><i class="bi bi-plus-square"></i></button>
-            </header>
-            <p id="parentDetails"></p>
+            <div class="content">
+                <button id="addChildButton" class="icon-button"><i class="bi bi-plus-square"></i></button>
+                <p id="parentDetails"></p>
+            </div>
+
             <section id="childView">
             <table id="childTable">
                 <thead>
