Fix static file caching issues

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>Chi phí đi lại</title>
   <link rel="stylesheet" href="/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -29,7 +30,7 @@
   </div>
 
     <!-- Nội dung chính -->
-    <div id="mainContent" style="display: none;">
+    <!-- <div id="mainContent" style="display: none;"> -->
         <div class="container">            
             <div class="container">
                 <h2>Danh sách chi phí</h2>
@@ -57,9 +58,9 @@
             <span class="close" id="closeModalBtn">&times;</span> <!-- Nút đóng -->
             <h2>Chi tiết chi phí</h2>
             <div class="content">
-                <p id="parentDetails"></p>
-                <button id="addChildButton" class="icon-button"><i class="bi bi-plus-square"></i></button>
-            </div>
+              <p id="parentDetails"></p>
+              <button id="addChildButton" class="icon-button float-right"><i class="bi bi-plus-square"></i></button>
+          </div>
 
             <section id="childView">
             <table id="childTable">
